--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Test-repository</h1>
-      <h2 class="project-tagline">Repository for Learning</h2>
+      <h2 class="project-tagline">Repository for Learning GitHub....:-)</h2>
       <a href="https://github.com/Divyoattama/Test-repositiry" class="btn">View on GitHub</a>
       <a href="https://github.com/Divyoattama/Test-repositiry/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Divyoattama/Test-repositiry/tarball/master" class="btn">Download .tar.gz</a>
